--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=org.wildstang
-robot.class=${package}.crio.RobotTemplate
-simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
+#package=org.wildstang
+#robot.class=${package}.crio.RobotTemplate
+#simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
