--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
 	<classpathentry kind="lib" path="lib/opencv-2411.jar"/>
+	<classpathentry kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
