--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,11 @@
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
-	<classpathentry kind="lib" path="lib/opencv-2411.jar"/>
 	<classpathentry kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
+	<classpathentry kind="lib" path="lib/opencv-300.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Janine/Downloads/opencv/build/java/x64"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
