--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/NetworkTables.jar"/>
-	<classpathentry kind="lib" path="lib/WPILib.jar"/>
+	<classpathentry kind="var" path="WPILIB_HOME/java/current/lib/NetworkTables.jar"/>
+	<classpathentry kind="var" path="WPILIB_HOME/java/current/lib/WPILib.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/easymock-3.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
@@ -14,10 +14,6 @@
 	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
 	<classpathentry kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
-	<classpathentry kind="lib" path="lib/opencv-300.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Janine/Downloads/opencv/build/java/x64"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/opencv-2411.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
