--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -58,3 +58,5 @@ cleanup.use_type_arguments=false
 cleanup_profile=_Cleanup
 cleanup_settings_version=2
 eclipse.preferences.version=1
+formatter_profile=_WildStang
+formatter_settings_version=12
