--- a/.classpath
+++ b/.classpath
@@ -2,19 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-
-	<classpathentry kind="var" path="WPILIB_HOME/java/current/lib/NetworkTables.jar"/>
-	<classpathentry kind="var" path="WPILIB_HOME/java/current/lib/WPILib.jar"/>
-	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/easymock-3.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/jacocoant.jar"/>
-	<classpathentry kind="lib" path="lib/javassist-3.19.0-GA.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
-	<classpathentry kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
-	<classpathentry kind="lib" path="lib/opencv-2411.jar"/>
-	<classpathentry kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="var" path="WPILIB_HOME/java/current/lib/NetworkTables.jar"/>
+	<classpathentry exported="true" kind="var" path="WPILIB_HOME/java/current/lib/WPILib.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/easymock-3.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jacocoant.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javassist-3.19.0-GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencv-2411.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
