--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="var" path="WPILIB_HOME/java/current/lib/NetworkTables.jar"/>
-	<classpathentry exported="true" kind="var" path="WPILIB_HOME/java/current/lib/WPILib.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/easymock-3.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
@@ -15,5 +13,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/powermock-easymock-1.6.2-full.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/opencv-2411.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/bulldog.beagleboneblack.hardfp.jar"/>
+	<classpathentry kind="var" path="wpilib" sourcepath="wpilib.sources"/>
+	<classpathentry kind="var" path="networktables" sourcepath="networktables.sources"/>
+	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
+	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
+	<classpathentry kind="var" path="talon_lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
