Trying to get 2017 to build

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,5 @@ sysProps.xml
 /bin/
 /build/*
 /dist/*
-<<<<<<< HEAD
 
-# Build File
-#build.xml
-=======
-/bin/
->>>>>>> branch 'bingrabbers' of https://nwalters512@bitbucket.org/wildstang/2015_software.git
+reports
