--- a/fwbuild.properties
+++ b/fwbuild.properties
@@ -1,7 +1,7 @@
 class.dir=class
 source.dir=src
 lib.dir=lib
-dist.lib.dir=distlib
+dist.lib.dir=${user.home}/wpilib/java/current/lib
 dist.dir=dist
 dist.jar=framework.jar
 test.class.dir=testclass
