--- a/build.properties
+++ b/build.properties
@@ -2,3 +2,4 @@
 #package=org.wildstang
 #robot.class=${package}.crio.RobotTemplate
 #simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
+userLibs.dir=lib/
